# ux-research-assistant

./: README.md  pyproject.toml  transcription.ipynb  whisper_mock_en.ipynb
.devcontainer/: devcontainer.json
ux_research_assistant/persona/: mas.py
