[tool.poetry]
name = "ux-research-assistant"
version = "0.1.0"
description = ""
authors = ["t-chito <published.address.of.k.t@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
autogen-agentchat = ">=0.2,<1.0"


[tool.poetry.group.tmp.dependencies]
flaml = {extras = ["automl"], version = "^2.3.1"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
